# upload-component

./: .gitignore  Cargo.toml  README.md  wasmcloud.toml  wit.md
src/: download.rs  fs.rs  lib.rs  upload.rs
src/tests/: mod.rs
wit/: world.wit
